--- a/challenge_3/package.json
+++ b/challenge_3/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "babel": "./node_modules/.bin/babel client --out-dir public --presets @babel/preset-react --source-maps inline --watch"
+    "babel": "./node_modules/.bin/babel client --out-dir public --presets @babel/preset-react --source-maps inline --watch",
+    "start": "node server.js"
   },
   "author": "Jacob Johnson",
   "license": "ISC",
@@ -13,6 +14,8 @@
     "@babel/cli": "^7.11.6",
     "@babel/core": "^7.11.6",
     "@babel/preset-react": "^7.10.4",
-    "express": "^4.17.1"
-  }
+    "express": "^4.17.1",
+    "react": "^16.13.1"
+  },
+  "devDependencies": {}
 }
